--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div>
       <input class="w-full my-2 p-2 capitalize" type="password" id="password" placeholder="password">
     </div>    
-    <a href="pengelolaKItab//" class="block border-2 border-white px-3 py-1 rounded-lg mt-4 w-full text-center">submit</a>
+    <a href="pengelolaKItab/atawakal.html" class="block border-2 border-white px-3 py-1 rounded-lg mt-4 w-full text-center">submit</a>
   </form>
 </body>
 </html>
