--- a/pnegurusAsrama/user.html
+++ b/pnegurusAsrama/user.html
@@ -93,6 +93,11 @@
               </table>
             </figure>
             <button class="fixed bottom-36 left-[50%] -translate-x-[50%] bg-teal-600 text-white shadow-xl px-4 py-1 rounded-xl border-2 border-gray-400" type="submit">pesan sekarang</button>
+
+            <!-- pilih metode pesanan -->
+            <section>
+              
+            </section>
           </div>
         </div>
 
