melengkapi fitur sebelumnya

--- a/pengelolaKItab/kelolaKitab.html
+++ b/pengelolaKItab/kelolaKitab.html
@@ -151,4 +151,8 @@
 </body>
 </html>
 
-
+saya memiliki kode hatml seperti berikut <div class="card">
+  <span class="harga">50000</span>
+  <span class="jumlah"></span>
+</div>
+<button id="ambil">kirim</button>
