--- a/pengelolaKItab/kelolaKitab.html
+++ b/pengelolaKItab/kelolaKitab.html
@@ -144,15 +144,23 @@
     </main>
   </section>
 
-
-<script type="module" src="../interaktif.js"></script>
-<script type="module" src="database.js"></script>
-<script type="module" src="cetakData.js"></script>
+  <script type="module" src="database.js"></script>
+  <script type="module" src="cetakData.js"></script>
+  <script type="module" src="../interaktif.js"></script>
 </body>
 </html>
 
-saya memiliki kode hatml seperti berikut <div class="card">
-  <span class="harga">50000</span>
-  <span class="jumlah"></span>
+<div class="card">
+  <figure>
+    <div>
+      <div>
+        <span class="harga">50000</span>
+        <span class="jumlah"></span>
+      </div>
+    </div>
+    <div>...</div>
+    <div>...</div>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo temporibus odit, in laborum ea natus consequatur distinctio accusamus ullam tenetur!</p>
+  </figure>      
 </div>
 <button id="ambil">kirim</button>
