--- a/register.html
+++ b/register.html
@@ -54,7 +54,6 @@
     }
   })
 
-
   // import {buatDataLogin} from './method_sistem.js'
   // let pemilikLogin = buatDataLogin()
 
@@ -71,7 +70,7 @@
     }else if(!adakahString(username)) {
       registrasiAkun(username, password)
       alert('registrasi succesfull')
-      // document.location = 'login.html'
+      document.location = 'login.html'
     } 
     // console.log(localStorage.users)
    }) 
