--- a/pengelolaKItab/kelolaKitab.html
+++ b/pengelolaKItab/kelolaKitab.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="../input.css">
   <title>pengelola kitab</title> 
@@ -16,7 +17,7 @@
     <div class="mx-auto w-[95%]">
       <div class="flex text-sm w-2 text-white justify-between">
         <a href="../pengelolaKItab/atawakal.html" class="px-3 bg-slate-900">admin</a>
-        <a href="../pnegurusAsrama/user.html" class="px-3 ">user</a>
+        <a href="../pengurusAsrama/user.html" class="px-3 ">user</a>
       </div>
     </div>
   </nav>
@@ -51,7 +52,9 @@
               <a href="history.html">KT history</a>
             </ul>
           </nav>
-          <span class="pengaturan"><i class="fa fa-th-list" aria-hidden="true"></i></span>
+          <!-- <span class="pengaturan"><i class="fa fa-th-list" aria-hidden="true"></i></span> -->
+          <span class="pengaturan"><i class="bi bi-box-arrow-right cursor-pointer"></i></span>
+
         </div>
       </div>
     </header>
@@ -143,19 +146,13 @@
       </div>
     </main>
   </section>
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      var userLoginData = localStorage.getItem("userLogin");
-  
-      // Memeriksa apakah data userLogin atau adaUserLogin berisi "Null"
-      if (!userLoginData || userLoginData === "Null") {
-        alert('Anda belum login!!')
+  <script type="module">
+    import {$} from './../method_interaktif.js'
+    import {cekLogin, logOut} from './../method_sistem.js'
+    cekLogin()
 
-        // Redirect atau lakukan tindakan lain seperti menampilkan pesan dan mengarahkan ke halaman login
-        window.location.href = "../login.html";
-      }
-    // }
-  });
+    $('.bi-box-arrow-right').onclick = logOut
+
   </script>  
   <script type="module" src="../database.js"></script>
   <script type="module" src="../cetakData.js"></script>
