memperbaiki interaktif di halaman user yang rusak

--- a/pengelolaKItab/kelolaKitab.html
+++ b/pengelolaKItab/kelolaKitab.html
@@ -34,7 +34,7 @@
   </section>
 
   <section class="header-main">
-    <header style="background-color: rgb(80, 104, 117);" class="text-white capitalize">
+    <header style="background-color: #001e2e;" class="text-white capitalize">
       <div class="w-[95%] mx-auto">
         <div class="flex justify-between items-center p-3">
           <div class="flex items-center">
@@ -104,7 +104,7 @@
           
           <!-- bagian kitab berdasarkan kelas -->
           <div class="flex flex-wrap gap-6">
-            <figure id="tabel-kelas" class="mt-4 ">
+            <figure id="tabel-kelas" class="mt-4">
               <caption>data kitab kelas</caption>
               <div></div>
             </figure>
