--- a/pengelolaKItab/atawakal.html
+++ b/pengelolaKItab/atawakal.html
@@ -19,7 +19,7 @@
   </div>
 </nav>
 <div class="header-main">
-  <header style="background-color: rgba(0, 30, 46);" class="text-white capitalize">
+  <header style="background-color: #001e2e;" class="text-white capitalize">
     <div class="w-[95%] mx-auto">
       <div class="flex justify-between items-center p-3">
         <div class="flex items-center">
