--- a/pengelolaKItab/kelolaKitab.html
+++ b/pengelolaKItab/kelolaKitab.html
@@ -11,8 +11,7 @@
   <title>pengelola kitab</title> 
 </head>
 
-<body class="h-[1000px]">
-
+<body class="">
   <nav class="bg-slate-500 capitalize">
     <div class="mx-auto w-[95%]">
       <div class="flex text-sm w-2 text-white justify-between">
